# Search-launcher

./: Cargo.toml  README.md
src/: hotkey.rs  icon_loader.rs  indexer.rs  main.rs  search.rs  ui.rs
