[package]
name = "native_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow"] }
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
fuzzy-matcher = "0.3.7"
walkdir = "2.4.0"
crossbeam-channel = "0.5.8"
tray-icon = "0.14.3"
dirs = "6.0.0"
mimalloc = "0.1"
rayon = "1.8"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Imaging"
]

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1  
panic = "abort"     
strip = true        
